--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-pandas==2.1.0
-numpy==1.24.0
-pydantic==2.4.0
-cerberus==1.3.4
-cryptography==41.0.3
-pycryptodome==3.19.0
-torch==2.1.0
-transformers==4.34.0
-tokenizers==0.15.0
-redis==5.0.1
-bcrypt==4.0.1
-gradio==3.50.2
+pyjwt==2.8.0
+cryptography>=42.0.0
+python-dotenv==1.0.0
+faker==20.1.0  # For generating decoy data
+redis==5.0.1   # For production device cache
+google-cloud-storage==2.13.0
+google-cloud-secret-manager==2.16.4
+pytest==7.4.3
+pytest-cov==4.1.0
